--- a/components/argocd/apps/overlays/parasol-insurance-dev/patch-operators-list.yaml
+++ b/components/argocd/apps/overlays/parasol-insurance-dev/patch-operators-list.yaml
@@ -14,6 +14,16 @@ spec:
       - cluster: local
         url: https://kubernetes.default.svc
         values:
+          name: nvidia-gpu-operator
+          path: components/operators/gpu-operator-certified/aggregate/overlays/aws
+      - cluster: local
+        url: https://kubernetes.default.svc
+        values:
+          name: nfd-operator
+          path: components/operators/nfd/aggregate/overlays/default
+      - cluster: local
+        url: https://kubernetes.default.svc
+        values:
           name: openshift-ai-operator
           path: components/operators/openshift-ai/aggregate/overlays/stable-2.19
       - cluster: local
@@ -36,7 +46,6 @@ spec:
         values:
           name: openshift-servicemesh-operator
           path: components/operators/openshift-servicemesh/operator/overlays/stable
-
       # - cluster: local
       #   url: https://kubernetes.default.svc
       #   values:
