--- a/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
+++ b/tenants/parasol-insurance/data-science-pipelines/base/dspa.yaml
@@ -26,8 +26,8 @@ spec:
       port: ''
       region: us-east-1
       s3CredentialsSecret:
-        accessKey: minio # Update with minio access key
-        secretKey: minio123 # Update with minio secret key
+        accessKey: minio_root_user # Update with minio access key
+        secretKey: minio_root_password # Update with minio secret key
         secretName: minio # Update with the secret name
       scheme: http
   persistenceAgent:
